--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "font-awesome": "^4.7.0",
+    "js-audio-recorder": "^1.0.6",
+    "lamejs": "^1.2.0",
+    "lodash": "^4.17.15",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
